k8s/staging/ingress/karkee-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karkee-staging-ingress
  namespace: development
spec:
  rules:
  - host: phpmyadmin.staging.karkee.biz
    http:
      paths:
      - backend:
          service:
            name: nginx-service
            port:
              number: 80
        pathType: ImplementationSpecific
  - host: api.staging.karkee.biz
    http:
      paths:
      - backend:
          service:
            name: api-service
            port:
              number: 8080
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - ip: 34.110.141.111
